# nz-accountant-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  MAINTAINERS.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/workflows/: tests.yml
checklists/: README.md  gst-review-checklist.md  year-end-workpaper-checklist.md
docs/: README.md  codex-for-oss-review.md  github-discussions.md  github-issues.md  github-publish-checklist.md  maintenance-plan.md  project-scope.md  release-checklist.md  release-v0.1.md  roadmap.md  tax-concepts.md  template-design-standards.md
examples/: README.md  fif-example.md  gst-example.md  quick-sale-example.md  sample-fif-input.csv  sample-gst-reconciliation.csv  sample-quick-sale-input.csv  trust-accounting-example.md
property-development/: README.md  property-development-cost-tracker.md
templates/: README.md  fif-calculator-template.md  gst-reconciliation-template.md  property-development-cost-tracker-template.md  quick-sale-calculator-template.md  shareholder-current-account-tracker-template.md  year-end-workpaper-checklist-template.md
tests/: test_fif.py  test_gst.py  test_quick_sale.py
tools/: README.md  fif-calculator.md  fif-web-calculator.html  gst-reconciliation-tool.md  quick-sale-calculator.md  shareholder-current-account-tracker.md
xero/: README.md  xero-bank-reconciliation-sop.md
(+5 files in other folders)
