[project]
name = "nz-accountant-toolkit"
version = "0.1.0"
description = "Open-source tools, templates, and workpaper guidance for New Zealand accountants."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "NZ Accountant Toolkit contributors" }
]
keywords = [
  "new-zealand",
  "accounting",
  "tax",
  "gst",
  "fif",
  "xero",
  "workpapers"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial :: Accounting"
]

[project.urls]
Homepage = "https://github.com/cissyyang83/nz-accountant-toolkit"
Issues = "https://github.com/cissyyang83/nz-accountant-toolkit/issues"

[project.scripts]
nz-accountant-toolkit = "nz_accountant_toolkit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
